--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,13 @@
 {
   "BundleType": "Application",
+  "BundleIdentifier" : "prettydress",
+  "BundleVersion": "0.0.3",
   "RequiredPermissions": [
     "http://*.cloudfront.net",
     "http://ws.audioscrobbler.com/",
     "http://code.jquery.com/"
   ],
-  "ApiPermissions" : {
-    "core" : ["private"]
-  },
-  "BundleIdentifier" : "prettydress",
-  "BundleVersion": "0.0.2",
   "Dependencies": {
-    "api": "1.19.0",
-    "views": "1.22.0",
-    "shared": "0.1.0"
+    "api": "1.19.0"
   }
 }
